wip: add speicals

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -41,6 +41,7 @@
 @import "./components/home-content.css";
 @import "./components/menu-card.css";
 @import "./components/menu-item.css";
+@import "./components/specials.css";
 @import "./components/buttons.css";
 @import "./components/footer.css";
 @import "./components/locations.css";
