--- a/assets/css/components/locations.css
+++ b/assets/css/components/locations.css
@@ -121,5 +121,9 @@
 
   .location-map iframe {
     display: block;
+    width: 100%;
+    height: 100%;
+    min-height: inherit;
+    border: 0;
   }
 }
